Fix navbar logo positioning and adjust hero title spacing

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -14,7 +14,7 @@
 .navbar-container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 3rem;
+  padding: 0 2rem;
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
@@ -26,7 +26,7 @@
   align-items: center;
   height: 80px;
   justify-self: start;
-  margin-left: -8rem;
+  margin-left: 0;
 }
 
 .logo-img {
@@ -118,7 +118,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  margin-right: -8rem;
+  margin-right: 0;
 }
 
 .navbar-cta {
